--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.1",
+    "@tanstack/react-query": "^5.51.24",
     "antd": "^5.20.1",
     "js-cookie": "^3.0.5",
     "next": "14.2.5",
@@ -18,6 +19,7 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.51.15",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
